<resources>
    <string name="app_name">10118372</string>
    <string name="logo">logo</string>
    <string name="masuk_untuk_menuju_ke">Masuk untuk menuju ke</string>
    <string name="halaman_utama">halaman utama!</string>
    <string name="masuk">MASUK</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="tidak_punya_akun_buat_sekarang">Tidak punya akun? Buat sekarang!</string>
    <string name="daftar">DAFTAR</string>
    <string name="rifqi_muhammad_rizqullah_10118372">Rifqi Muhammad Rizqullah 10118372</string>
    <string name="deskripsi">Nama saya adalah Rifqi Muhammad Rizqullah, lahir di kota bandung. 17 April 1999.
    Saya merupakan mahasiswa teknik informatika smester 6 di universitas komputer indonesia. Sejak saya menjadi mahasiswa
        berfokus di bidang mobile dan web develoment. Selain itu saya juga memiliki beberapa hobi seperti olahraga voli dan kegiatan outdoor</string>
</resources>