<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:id="@+id/logo1"
        android:src="@drawable/bigdream1"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/logo" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo1"
        android:layout_marginTop="80dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="20sp"
            android:text="@string/masuk_untuk_menuju_ke"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="20sp"
            android:text="@string/halaman_utama"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginTop="20dp"
            android:textSize="35sp"
            android:textStyle="bold"
            android:fontFamily="sans-serif-condensed-medium"
            android:textColor="#000"
            android:text="@string/masuk"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:textColor="#000"
            android:text="Username"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/Username"
            android:inputType="text"
            android:outlineProvider="paddedBounds"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:hint="admin"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:textColor="#000"
            android:text="Password"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/Password"
            android:inputType="textPassword"
            android:outlineProvider="paddedBounds"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:hint="admin"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/BtnMasuk"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="#1D69AB"
            android:textColor="#fff"
            android:textSize="20sp"
            android:text="@string/masuk"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:textAlignment="center"
            android:textSize="15sp"
            android:text="@string/tidak_punya_akun_buat_sekarang"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/BtnDaftar"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="#1D69AB"
            android:textColor="#fff"
            android:textSize="20sp"
            android:text="@string/daftar"/>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#1D69AB"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/rifqi_muhammad_rizqullah_10118372"
            android:textColor="#fff"
            android:textSize="10sp"/>
    </RelativeLayout>

</RelativeLayout>